Implemented /kingdom create, /kingdom claim, /kingdom add, /kingdom remove, /kingdom leave, /kingdom delete, /kingdom info, /kingdom list, /kingdom help, etc, plus accompanying functions.

--- a/Kingdoms/src/main/resources/plugin.yml
+++ b/Kingdoms/src/main/resources/plugin.yml
@@ -11,4 +11,10 @@ commands:
   gold:
     permission: gold.*
   kingdom:
-    permission: kingdom.*
+    description: Kingdom command prefix
+  chunk:
+    description: Chunk command prefix
+  accept:
+    description: Accept invitation
+  deny:
+    description: Decline invitation
