Implemented /kingdom flag add, /kingdom flag remove, with flags pve, pvp, open

--- a/Kingdoms/src/main/resources/plugin.yml
+++ b/Kingdoms/src/main/resources/plugin.yml
@@ -12,6 +12,7 @@ commands:
     permission: gold.*
   kingdom:
     description: Kingdom command prefix
+    aliases: k
   chunk:
     description: Chunk command prefix
   accept:
