Added race switching and armor leveling.

--- a/Kingdoms/src/main/resources/plugin.yml
+++ b/Kingdoms/src/main/resources/plugin.yml
@@ -21,3 +21,5 @@ commands:
     description: Accept invitation
   deny:
     description: Decline invitation
+  switchrace:
+    description: Switch races
